get all works added
