# docs/swagger.yaml
@@ -122,6 +122,31 @@ info:
   title: net-fix
   version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      operationId: works
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: okey
+          schema:
+            items:
+              $ref: '#/definitions/handler.work'
+            type: array
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "405":
+          description: Method Not Allowed
+        "500":
+          description: Internal Server Error
+      summary: get all works
+      tags:
+      - service
   /login:
     post:
       consumes:
